--- a/readme.org
+++ b/readme.org
@@ -24,6 +24,7 @@
   #+begin_src emacs-lisp
     (straight-use-package 'leaf)
     (straight-use-package 'magit)
+    (straight-use-package 'htmlize)
   #+end_src
 * Detect System
   #+begin_src emacs-lisp
@@ -216,6 +217,51 @@
 ** Telega
    #+begin_src emacs-lisp
      (straight-use-package 'telega)
+   #+end_src
+** Org-static-blog
+   #+begin_src emacs-lisp
+     (straight-use-package 'org-static-blog)
+
+     (setq org-static-blog-publish-title "Ethereal Horizon")
+     (setq org-static-blog-publish-url "https://keke-cute.github.io/")
+     (setq org-static-blog-publish-directory "~/Repos/keke-cute.github.io")
+     (setq org-static-blog-posts-directory "~/Repos/keke-cute.github.io/posts")
+     (setq org-static-blog-drafts-directory "~/Repos/keke-cute.github.io/drafts")
+     (setq org-static-blog-enable-tags t)
+     (setq org-export-with-toc nil)
+     (setq org-export-with-section-numbers nil)
+
+     ;; This header is inserted into the <head> section of every page:
+     ;;   (you will need to create the style sheet at
+     ;;    ~/projects/blog/static/style.css
+     ;;    and the favicon at
+     ;;    ~/projects/blog/static/favicon.ico)
+     (setq org-static-blog-page-header
+     "<meta name=\"author\" content=\"keke\">
+     <meta name=\"referrer\" content=\"no-referrer\">
+     <link href= \"static/style.css\" rel=\"stylesheet\" type=\"text/css\" />
+     <link rel=\"icon\" href=\"static/favicon.ico\">")
+
+     ;; This preamble is inserted at the beginning of the <body> of every page:
+     ;;   This particular HTML creates a <div> with a simple linked headline
+     (setq org-static-blog-page-preamble
+     "<div class=\"header\">
+       <a href=\"https://keke-cute.github.io\">Ethereal Horizon</a>
+     </div>")
+
+     ;; This postamble is inserted at the end of the <body> of every page:
+     ;;   This particular HTML creates a <div> with a link to the archive page
+     ;;   and a licensing stub.
+     (setq org-static-blog-page-postamble
+     "<div id=\"archive\">
+       <a href=\"https://keke-cute.github.io/archive.html\">Other posts</a>
+     </div>
+     <center><a rel=\"license\" href=\"https://creativecommons.org/licenses/by-sa/3.0/\"><img alt=\"Creative Commons License\" style=\"border-width:0\" src=\"https://i.creativecommons.org/l/by-sa/3.0/88x31.png\" /></a><br /><span xmlns:dct=\"https://purl.org/dc/terms/\" href=\"https://purl.org/dc/dcmitype/Text\" property=\"dct:title\" rel=\"dct:type\">bastibe.de</span> by <a xmlns:cc=\"https://creativecommons.org/ns#\" href=\"https://bastibe.de\" property=\"cc:attributionName\" rel=\"cc:attributionURL\">Bastian Bechtold</a> is licensed under a <a rel=\"license\" href=\"https://creativecommons.org/licenses/by-sa/3.0/\">Creative Commons Attribution-ShareAlike 3.0 Unported License</a>.</center>")
+
+     ;; This HTML code is inserted into the index page between the preamble and
+     ;;   the blog posts
+     (setq org-static-blog-index-front-matter
+     "<h1> Ethereal Horizon </h1>\n")
    #+end_src
 * Languages
 ** Haskell
