--- a/readme.org
+++ b/readme.org
@@ -94,11 +94,12 @@
    #+end_src
 ** Font
    #+begin_src emacs-lisp
-     (when (graphic-p)
-       (let ((emacs-font-size 16)
-	     (emacs-font-name "OperatorMonoSSmLig Nerd Font"))
-	 (set-frame-font (format "%s-%s" (eval emacs-font-name) (eval emacs-font-size)) nil t)
-	 (set-fontset-font (frame-parameter nil 'font) 'unicode (eval emacs-font-name))))
+     (when (display-graphic-p)
+       (set-face-attribute
+	'default nil
+	:font (font-spec :name   "OperatorMonoSSmLig Nerd Font"
+			 :weight 'normal
+			 :size   15)))
    #+end_src
 ** Theme
    #+begin_src emacs-lisp
