--- a/readme.org
+++ b/readme.org
@@ -170,6 +170,22 @@
 	  (setq highlight-indent-guides-method (if window-system 'character 'nil))
 	  (setq highlight-indent-guides-responsive 'stack)))
     #+end_src
+*** Doom-modeline
+    #+begin_src emacs-lisp
+      (straight-use-package 'doom-modeline)
+
+      (leaf doom-modeline
+	:hook
+	(after-init-hook . doom-modeline-mode))
+    #+end_src
+*** Dashboard
+    #+begin_src emacs-lisp
+      (straight-use-package 'dashboard)
+
+      (leaf dashboard
+	:config
+	(dashboard-setup-startup-hook))
+    #+end_src
 * Editor
   #+begin_src emacs-lisp
     ;; 自动加载外部修改过的文件
