--- a/nasy-theme.org
+++ b/nasy-theme.org
@@ -98,7 +98,7 @@ Nasy's Theme
          (n-芽灰   "#E3DBBF")
          (n-茶     "#B35C44")
          (n-荼     "#F3F9F1")
-         (n-蝋白   "#FEF8DE")
+         (n-蠟白   "#FEF8DE")
          (n-霜     "#E9F1F6")
          (n-青莲   "#801DAE")
          (n-靛青   "#177CB0")
@@ -337,7 +337,7 @@ Nasy's Theme
 
      ;;; org mode
      `(org-block
-       ((,class (:background ,n-蝋白 :foreground ,n/墨缟 :extend t))))
+       ((,class (:background ,n-蠟白 :foreground ,n/墨缟 :extend t))))
      `(org-block-begin-line
        ((,class (:background ,n-富春紡
                              :box (:line-width 1 :style released-button)
@@ -420,6 +420,10 @@ Nasy's Theme
      `(org-meta-line
        ((,class (:inherit font-lock-comment-face
                           :underline nil))))
+     `(org-roam-link
+       ((,class (:inherit org-link
+                          :overline  t
+                          :underline t))))
      `(org-tag
        ((,class (:background ,n/牙黛
                              :box t
